--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -36,4 +36,10 @@
         android:name="com.example.fantasy_basketball.SignupFragment"
         android:label="Sign Up"
         tools:layout="@layout/fragment_signup" />
+    <action
+        android:id="@+id/action_signupFragment_to_loginFragment"
+        app:destination="@id/loginFragment" />
+    <action
+        android:id="@+id/action_signupFragment_to_homeFragment"
+        app:destination="@id/homeFragment" />
 </navigation>
