--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -10,5 +10,13 @@
         android:id="@+id/ic_setting"
         android:icon="@drawable/ic_setting"
         android:title="Setting"/>
+    <item
+        android:id="@+id/ic_Search"
+        android:icon="@drawable/ic_search"
+        android:title="Search"/>
+    <item
+        android:id="@+id/ic_proj"
+        android:icon="@drawable/ic_search"
+        android:title="Projection"/>
 
 </menu>
