--- a/app/src/main/res/layout/fragment_matchup.xml
+++ b/app/src/main/res/layout/fragment_matchup.xml
@@ -114,4 +114,15 @@
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <!-- View League Button -->
+    <Button
+        android:id="@+id/viewLeagueButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View League"
+        app:layout_constraintTop_toBottomOf="@id/cardView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
