--- a/app/src/main/res/layout/fragment_team_info.xml
+++ b/app/src/main/res/layout/fragment_team_info.xml
@@ -31,6 +31,7 @@
         android:text="Team Name"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:layout_gravity="start"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.584"
         app:layout_constraintStart_toStartOf="parent"
