Fixed crashes related to joining and creating league

--- a/app/src/main/res/layout/fragment_league.xml
+++ b/app/src/main/res/layout/fragment_league.xml
@@ -7,6 +7,16 @@
     tools:context=".LeagueFragment">
 
     <!-- League Name -->
+    <ImageButton
+        android:id="@+id/teamInfoButton"
+        android:layout_width="56dp"
+        android:layout_height="53dp"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/ic_info"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="4dp" />
+
     <TextView
         android:id="@+id/leagueName"
         android:layout_width="wrap_content"
@@ -32,14 +42,6 @@
         app:layout_constraintVertical_bias="0.2" />
 
     <!-- Team Info Button -->
-    <ImageButton
-        android:id="@+id/teamInfoButton"
-        android:layout_width="56dp"
-        android:layout_height="53dp"
-        android:background="?android:attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_info"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Toolbar with hamburger menu -->
     <androidx.appcompat.widget.Toolbar
@@ -47,10 +49,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    app:navigationIcon="@drawable/ic_hamburger_menu"
-    app:layout_constraintEnd_toEndOf="parent"/>
+        app:navigationIcon="@drawable/ic_hamburger_menu"
+        android:focusable="false"
+        android:clickable="false"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
