--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -98,7 +98,7 @@
         android:label="Join League" />
     <action
         android:id="@+id/action_joinLeagueFragment_to_homeFragment"
-        app:destination="@id/inviteFriendsFragment" />
+        app:destination="@id/homeFragment" />
 
 
     <!-- SettingsFragment -->
