--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -56,15 +56,6 @@
         android:label="Player Search"
         tools:layout="@layout/fragment_player_search" />
 
-    <fragment
-        android:id="@+id/playerStatsFragment"
-        android:name="com.example.fantasy_basketball.PlayerStatsFragment"
-        android:label="Player Stats" />
-
-    <fragment
-        android:id="@+id/playerProjectionsFragment"
-        android:name="com.example.fantasy_basketball.PlayerProjectionsFragment"
-        android:label="Player Stats" />
 
     <fragment
         android:id="@+id/playerListFragment"
@@ -146,6 +137,9 @@
     <action
         android:id="@+id/action_leagueFragment_to_teamInfoFragment"
         app:destination="@id/teamInfoFragment" />
+    <action
+        android:id="@+id/action_leagueFragment_to_inviteFriendsFragment"
+        app:destination="@id/inviteFriendsFragment" />
 
     <!-- TeamInfoFragment -->
     <fragment
