--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -98,6 +98,9 @@
     <action
         android:id="@+id/action_createLeagueFragment_to_inviteFriendsFragment"
         app:destination="@id/inviteFriendsFragment" />
+    <action
+        android:id = "@+id/action_createLeagueFragment_to_leagueChatFragment"
+        app:destination= "@id/leagueChatFragment"/>
 
     <!-- InviteFriendsFragment -->
     <fragment
@@ -146,6 +149,9 @@
     <action
         android:id="@+id/action_leagueFragment_to_teamInfoFragment"
         app:destination="@id/teamInfoFragment" />
+    <action
+        android:id="@+id/action_leagueFragment_to_leagueChatFragment"
+        app:destination="@id/leagueChatFragment" />
 
     <!-- TeamInfoFragment -->
     <fragment
@@ -171,4 +177,16 @@
     <action
         android:id="@+id/action_editTeamInfoFragment_to_teamInfoFragment"
         app:destination="@id/teamInfoFragment" />
+
+    <!--LeagueChatFragment -->
+    <fragment
+        android:id="@+id/leagueChatFragment"
+        android:name="com.example.fantasy_basketball.LeagueChatFragment"
+        android:label="League Chat" />
+    <argument
+        android:name="leagueId"
+        app:argType="string" />
+
+
+
 </navigation>
