--- a/app/src/main/res/menu/league_menu.xml
+++ b/app/src/main/res/menu/league_menu.xml
@@ -6,4 +6,8 @@
     <item
         android:id="@+id/action_invite_friends"
         android:title="Invite Friends" />
+    <item
+        android:id="@+id/action_league_settings"
+        android:title="League Settings"
+        android:visible="false" /> <!-- Initially hidden, shown only for commissioners -->
 </menu>
