Fixed issues with merge

--- a/app/src/main/res/menu/league_menu.xml
+++ b/app/src/main/res/menu/league_menu.xml
@@ -10,9 +10,9 @@
 
         android:id="@+id/action_league_chat"
         android:title="League Chat" />
-
+    <item
         android:id="@+id/action_league_settings"
         android:title="League Settings"
-        android:visible="false" /> <!-- Initially hidden, shown only for commissioners -->
+        android:visible="false" />
 
 </menu>
