Feature display matchup with score

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -59,7 +59,6 @@
         android:label="Player Search"
         tools:layout="@layout/fragment_player_search" />
 
-
     <fragment
         android:id="@+id/playerListFragment"
         android:name="com.example.fantasy_basketball.PlayerListFragment"
@@ -151,6 +150,10 @@
 
         android:id="@+id/action_leagueFragment_to_leagueChatFragment"
         app:destination="@id/leagueChatFragment" />
+    <action
+        android:id="@+id/action_leagueFragment_to_scoreboardFragment"
+        app:destination="@id/scoreboardFragment" />
+
 
     <!-- LeagueSettingsFragment-->
     <fragment
@@ -201,4 +204,16 @@
     <argument
         android:name="leagueId"
         app:argType="string" />
+
+    <!--ScoreBoardFragment-->
+    <fragment
+        android:id="@+id/scoreboardFragment"
+        android:name="com.example.fantasy_basketball.ScoreboardFragment"
+        tools:layout="@layout/fragment_scoreboard">
+        <argument
+            android:name="leagueId"
+            app:argType="string" />
+    </fragment>
+
+
 </navigation>
