--- a/app/src/main/res/menu/league_menu.xml
+++ b/app/src/main/res/menu/league_menu.xml
@@ -11,6 +11,9 @@
         android:id="@+id/action_league_chat"
         android:title="League Chat" />
     <item
+        android:id="@+id/action_scoreboard"
+        android:title="League Score" />
+    <item
         android:id="@+id/action_league_settings"
         android:title="League Settings"
         android:visible="false" /> <!-- Initially hidden, shown only for commissioners -->
