--- a/app/src/main/res/layout/roster_player_item.xml
+++ b/app/src/main/res/layout/roster_player_item.xml
@@ -1,99 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardView"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="8dp">
+    android:layout_margin="8dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp"
+    android:clickable="true"
+    android:focusable="true" >
 
-    <!-- Player Picture Column -->
-    <Button
-        android:id="@+id/btnAddPlayer"
-        android:layout_width="75dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginEnd="8dp"
-        android:text="Add" />
-
-    <ImageView
-        android:id="@+id/playerPicture"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="8dp"
-        android:contentDescription="Player Picture"/>
-
-    <!-- Button next to the picture -->
-
-    <!-- Player Name and Details (Team, Position, Status) -->
     <LinearLayout
-        android:layout_width="172dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="8dp">
 
-        <!-- Player Name Column -->
-        <TextView
-            android:id="@+id/playerName"
-            android:layout_width="match_parent"
+        <!-- Player Picture Column -->
+        <Button
+            android:id="@+id/selectPlayerButton"
+            android:layout_width="75dp"
             android:layout_height="wrap_content"
-            android:text="Player Name"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="8dp"
+            android:text="Add" />
 
-        <!-- Team, Position, Status -->
+        <ImageView
+            android:id="@+id/playerPicture"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="Player Picture"/>
+
+        <!-- Player Name and Details (Team, Position, Status) -->
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="21dp"
-            android:orientation="horizontal">
+            android:layout_width="154dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
+            <!-- Player Name Column -->
             <TextView
-                android:id="@+id/playerTeam"
-                android:layout_width="wrap_content"
+                android:id="@+id/playerName"
+                android:layout_width="151dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:text="" />
+                android:text="Player Name"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/playerPosition"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:text="Position" />
+            <!-- Team, Position, Status -->
+            <LinearLayout
+                android:layout_width="154dp"
+                android:layout_height="21dp"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/playerStatus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Status" />
+                <TextView
+                    android:id="@+id/playerTeam"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/playerPosition"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:text="Position" />
+
+                <TextView
+                    android:id="@+id/playerStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Status" />
+            </LinearLayout>
         </LinearLayout>
+
+        <!-- Player Stats Columns -->
+        <TextView
+            android:id="@+id/playerPoints"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_height="47dp"
+            android:text="Points" />
     </LinearLayout>
 
-    <!-- Player Stats Columns -->
-    <!-- Points Column -->
-    <TextView
-        android:id="@+id/playerPoints"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_gravity="center"
-        android:layout_height="47dp"
-        android:text="Points" />
+</androidx.cardview.widget.CardView>
 
-    <!-- Average Score Column -->
-    <TextView
-        android:id="@+id/playerAvg"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_gravity="center"
-        android:layout_height="47dp"
-        android:text="Avg" />
 
-    <!-- Minutes Played Column -->
-    <TextView
-        android:id="@+id/playerMinutes"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_gravity="center"
-        android:layout_height="47dp"
-        android:text="Minutes" />
-
-</LinearLayout>
