--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -129,7 +129,11 @@
         android:id="@+id/leagueFragment"
         android:name="com.example.fantasy_basketball.LeagueFragment"
         android:label="LeagueFragment"
-        tools:layout="@layout/fragment_league" />
+        tools:layout="@layout/fragment_league" >
+        <action
+            android:id="@+id/action_leagueFragment_to_rosterFragment"
+            app:destination="@id/rosterFragment" />
+    </fragment>
     <action
         android:id="@+id/action_leagueFragment_to_teamInfoFragment"
         app:destination="@id/teamInfoFragment" />
@@ -141,6 +145,7 @@
         android:id="@+id/action_leagueFragment_to_scoreboardFragment"
         app:destination="@id/scoreboardFragment" />
 
+    <action
         android:id="@+id/action_leagueFragment_to_inviteFriendsFragment"
         app:destination="@id/inviteFriendsFragment" />
     <action
